# just_tetris

./: CMakeLists.txt  README.md
src/: main.c
